Add preview profile for APK builds

--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,9 @@
     },
     "preview": {
       "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
       "env": {
         "EXPO_PUBLIC_ENV": "staging"
       }
